crates/python_parser/src/snapshots/python_parser__lexer__tests__logical_newline_line_comment.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        Comment(
            "#Hello",
        ),
        0..6,
    ),
    (
        NonLogicalNewline,
        6..7,
    ),
    (
        Comment(
            "#World",
        ),
        7..13,
    ),
    (
        NonLogicalNewline,
        13..14,
    ),
]
